--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -105,6 +105,6 @@
       </section>
     </main>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
