--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -104,7 +104,10 @@
         </p>
       </section>
     </main>
-
+    <script>
+        const url = "./style.css";
+        document.head.innerHTML += `<link type="text/css" rel="stylesheet" href=${url}>`;
+    </script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
