--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+
+
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
-            <a href="#" class="navbar-brand">Bootstrap</a>
+            <a href="#" class="navbar-brand">Software Engineer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#learn" class="nav-link">What you'll learn</a>
+                        <a href="#aboutme" class="nav-link">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#questions" class="nav-link">Questions</a>
+                        <a href="#projects" class="nav-link">Projects and Work</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#instructors" class="nav-link">Instructors</a>
+                        <a href="#instructors" class="nav-link">Work History</a>
                     </li>
                 </ul>
             </div>
@@ -32,17 +35,173 @@
 
     <!-- Showcase -->
 
-    <section class="bg-dark text-light p-5 text-center">
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
         <div class="container">
-            <div>
+            <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h1>Become a Web Developer</h1>
+                    <h1>Jacob   
+                        <span class="text-warning">
+                            Kristopher
+                        </span>
+                        Cillay
+                    </h1>
+                    <p class="my-4">
+                        I am a new graduate computer scientist trying to find a job :(
+                    </p>
+                    <button class="btn btn-primary btn">Start The Enrollment</button>
                 </div>
-                <img src="img/showcase.svg" alt=""/>
+                <img class="img-fluid w-50 d-none d-sm-block" src="img/Developer.png" alt=""/>
             </div>
         </div>
     </section>
 
+    <!-- Boxes -->
+<section class="p-5">
+    <div class="container">
+        <div class="row text-center g-4">
+            <div class="col-md">
+                <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-laptop"></i>
+                        </div>
+                        <h3 class="card-title mb-3">
+                            Sentiment Analysis
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
+                        </p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card bg-secondary text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-person-square"></i>
+                        </div>
+                        <h3 class="card-title mb-3">
+                            Hybrid
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
+                        </p>
+                        <a href="#" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-people"></i>
+                        </div>
+                        <h3 class="card-title mb-3">
+                            Non Virtual
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
+                        </p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- Learn Sections -->
+
+<section id="aboutme" class="p-5">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md">
+                <img src="img/fundamentals.svg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md p-5">
+                <h2>About Me</h2>
+                <p class="lead">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores quos officiis dicta vero obcaecati veritatis doloremque cumque dolorem minima qui ex necessitatibus, unde ratione enim vitae dolorum alias sit est?
+                </p>
+                <a href="" class="btn btn-light mt-3">
+                    <i class="bi bi-chevron-right"></i> Read More
+                </a>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section id="projects" class="p-5 bg-dark text-light">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md p-5">
+                <h2>Projects and Work</h2>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, doloribus!
+                </p>
+                <a href="" class="btn btn-light mt-3">
+                    <i class="bi bi-chevron-right"></i> Read More
+                </a>
+            </div>
+            <div class="col-md">
+                <img src="img/fundamentals.svg" class="img-fluid" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+ <!-- Questions -->
+
+ <section class="p-5" id="questions">
+    <div class="container">
+        <h2 class="text-center mb-4">Freq Q</h2>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+
+            <!-- Item 1 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  What sets you apart from other applicants?
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.
+                </div>
+              </div>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    What skills do you have?
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.
+                </div>
+              </div>
+            </div>
+
+            <!-- Item 3 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+    </div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
 
