--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md">
-                <img src="img/fundamentals.svg" class="img-fluid" alt="">
+                <img src="img/Developer.png" class="img-fluid" alt="">
             </div>
             <div class="col-md p-5">
                 <h2>About Me</h2>
@@ -144,7 +144,7 @@
                 </a>
             </div>
             <div class="col-md">
-                <img src="img/fundamentals.svg" class="img-fluid" alt="">
+                <img src="img/Developer.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
