Added photos, some js, updated words in index file and made the read less better

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <title>Bootstrap</title>
+    <title>Jake Cillay's Website</title>
 </head>
 <body>
 
@@ -56,80 +56,30 @@
                     </h5>
                     <a id="download" href="img/JakeCillayResume.pdf.zip" class="text-center">Download Resume</a>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="img/Developer.png" alt=""/>
+                <img id="kicking" class="img-fluid w-50 d-none d-sm-block" src="img/kicking.jpeg" alt=""/>
             </div>
         </div>
     </section>
-
-    <!-- Boxes -->
-<section class="p-5">
-    <div class="container">
-        <div class="row text-center g-4">
-            <div class="col-md">
-                <div class="card bg-dark text-light">
-                    <div class="card-body text-center">
-                        <div class="h1 mb-3">
-                            <i class="bi bi-laptop"></i>
-                        </div>
-                        <h3 class="card-title mb-3">
-                            NLP Project
-                        </h3>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
-                        </p>
-                        <a href="resume.html" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="card bg-secondary text-light">
-                    <div class="card-body text-center">
-                        <div class="h1 mb-3">
-                            <i class="bi bi-person-square"></i>
-                        </div>
-                        <h3 class="card-title mb-3">
-                            Hybrid
-                        </h3>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
-                        </p>
-                        <a href="#" class="btn btn-dark">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="card bg-dark text-light">
-                    <div class="card-body text-center">
-                        <div class="h1 mb-3">
-                            <i class="bi bi-people"></i>
-                        </div>
-                        <h3 class="card-title mb-3">
-                            Non Virtual
-                        </h3>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
-                        </p>
-                        <a href="#" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
 
 
 <section id="aboutme" class="p-5 bg-white">
     <div class="container">
         <h2 class="text-center text-dark">Who I Am</h2>
         <p class="lead text-center text-dark mb-5">
-            Our instructors all have 5+ years working as a web developer in the industry
+            A Hardworking, Dedicated, Driven, and Eager Individual.
         </p>
         <div class="row g-4">
             <div class="col-md-9">
                 <h2>About Me</h2>
                 <p class="lead">
-                    I am Pitzer College graduate with a BS in Computer Science looking for a new grad software engineering role. Though I have less than one year in the software industry I am eagerly looking to start my early career as a software engineer. During undergrad, I worked on various programming projects and developed my skills in several languages, especially Java, Python, & JavaScript.
+                    I am a recent Pitzer College graduate with a BS in Computer Science looking for a new grad software engineering role. Though I have less than one year in the software industry I am eagerly looking to start my early career as a software engineer. During undergrad, I worked on various programming projects and developed my skills in several languages, especially Java, Python, & JavaScript.
                 </p>
                 <p class="lead">
-                    Outside of the tech realm, I am an avid backpacker and outdoorsman and I love exploring the Pacific Northwest with my friends and family. For the past 6 years, I've also self taught myself the guitar with the hope to participate in a live performance. 
+                    Outside of the tech realm, I am an avid backpacker and outdoorsman and I love exploring the Pacific Northwest with my friends and family. For the past 6 years, I've self taught myself guitar with the hope to participate in a live performance one day.
+                </p>
+
+                <p class="lead">
+                    I created this website in hopes to showcase some of my professional and non professional highlights. My hopes are to utilize this page not only to encourage me to continue learning WebDev, but also to track my progress in my tech career through a blog or journal. Thank you for visiting, and I hope you find it helpful!
                 </p>
 <!-- On the non-technical side of my journey through life:
 ☽☼ I'm an avid backpacker and outdoorsman
@@ -140,7 +90,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card bg-dark">
                     <div class="card-body text-center">
-                        <img src="img/Showcase.png" class="rounded-circle mb-3 img-fluid d-none d-sm-block" alt=""
+                        <img src="img/Showcase.png" class="rounded-circle mb-3 img-fluid d-sm-block" alt=""
                         />
                         <h3 class="card-title text-white mb-3">Jake Cillay</h3>
                         <p class="card-text text-white">
@@ -159,17 +109,73 @@
     </div>
 </section>
 
-<section id="projects" class="p-5 bg-dark text-light">
+    <!-- Boxes -->
+    <!-- <section class="p-5" id="projects">
+        <div class="container">
+            <h1 class="text-center">Projects</h1>
+
+            <div class="row text-center g-4">
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                NLP Project
+                            </h3>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
+                            </p>
+                            <a href="resume.html" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-secondary text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-person-square"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Hybrid
+                            </h3>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
+                            </p>
+                            <a href="#" onclick="showMoreSpotify()"class="btn btn-dark">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-people"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Non Virtual
+                            </h3>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nesciunt fuga fugiat odit odio recusandae.
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+    
+            </div>
+        </div>
+    </section> -->
+    
+<section class="p-5 bg-dark text-light">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md p-5">
                 <h2>Projects and Work</h2>
                 <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, doloribus!
+                    <p>Throughout my undergrad experience I have worked on many projects through classes and through personal curiosity. One of the most exciting projects I worked on was training a Bayes Net Classifier to determine <span id="dots">...</span><span id="more"> text messaging sentiment from my iMessaging data. I created a jupyter notebook and used SQL to access my iMessaging database. I used that data to determine how negative and positive I was throughout 2020. You can find more details and projects like that throughout my resume. In terms of work experience, I was able to extend my internship for 4 months after the initial end date. I gained so much knowledge working on a full stack video conferencing web application as an R & D Software Engineer for Intermedia - Anymeeting. Primarily, I worked with JavaScript in an Agile environment to deliver client side features. This internship taught me a lot about the Software Development Lifecycle and how a software team needs to function. More details about this internship and other internships I've been a part of in my resume.
+                    </span>
+                    </p>
                 </p>
-                <a href="" class="btn btn-light mt-3">
-                    <i class="bi bi-chevron-right"></i> Read More
-                </a>
+                <button href="" id="readMoreButton" class="btn btn-light mt-3" onclick="showMore()">Read More </button>
             </div>
             <div class="col-md">
                 <img src="img/Developer.png" class="img-fluid" alt="">
@@ -193,7 +199,7 @@
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">
-                    I was introduced to coding when I entered college through an introductory computer science course. This course taught me the complete basics of Java and what it takes to create applications from scratch. After this course, I realized that the world of code is limitless. I realized that I could implement any idea I might have into code and create something unique to me (like this website!).
+                    I was introduced to coding when I entered college through an introductory computer science course. This course taught me the complete basics of Java and what it takes to create applications from scratch. After this course, I realized that the world of code is limitless. I realized that I could implement any idea I might have into a program and create something unique to me (like this website).
                 </div>
               </div>
             </div>
@@ -238,6 +244,23 @@
 
 
             </div>
+
+
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Where is the most beautiful place you've hiked?
+                  </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                      Seven Devils Mountain Range in Riggins, ID. My family and I backpacked for three nights in the mountains and were able to stay at a secluded alpine lake called Dog Lake. You can check out some pictures <a href=""></a>
+                  </div>
+                </div>
+  
+  
+              </div>
+
           </div>
     </div>
 </section>
@@ -285,6 +308,9 @@
             zoom: 10,
         });
     </script>
+
+    <script type="text/javascript" src="main.js"></script>
+
 
 </body>
 
