--- a/index.html
+++ b/index.html
@@ -247,19 +247,19 @@
 
 
             <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <h2 class="accordion-header" id="flush-headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                     Where is the most beautiful place you've hiked?
                   </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">
                       Seven Devils Mountain Range in Riggins, ID. My family and I backpacked for three nights in the mountains and were able to stay at a secluded alpine lake called Dog Lake. You can check out some pictures <a href=""></a>
                   </div>
                 </div>
   
   
-              </div>
+            </div>
 
           </div>
     </div>
