Added new image

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <button href="" id="readMoreButton" class="btn btn-light mt-3" onclick="showMore()">Read More </button>
             </div>
             <div class="col-md">
-                <img src="img/Developer.png" class="img-fluid" alt="">
+                <img src="img/Avatar.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
