FIxed the nav and edited text

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
         </div>
     </section> -->
     
-<section class="p-5 bg-dark text-light">
+<section class="p-5 bg-dark text-light" id="projects">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md p-5">
-                <h2>Projects and Work</h2>
+                <h2>Projects and Work History</h2>
                 <p class="lead">
                     <p>Throughout my undergrad experience I have worked on many projects through classes and through personal curiosity. One of the most exciting projects I worked on was training a Bayes Net Classifier to determine <span id="dots">...</span><span id="more"> text messaging sentiment from my iMessaging data. I created a jupyter notebook and used SQL to access my iMessaging database. I used that data to determine how negative and positive I was throughout 2020. You can find more details and projects like that throughout my resume. In terms of work experience, I was able to extend my internship for 4 months after the initial end date. I gained so much knowledge working on a full stack video conferencing web application as an R & D Software Engineer for Intermedia - Anymeeting. Primarily, I worked with JavaScript in an Agile environment to deliver client side features. This internship taught me a lot about the Software Development Lifecycle and how a software team needs to function. More details about this internship and other internships I've been a part of in my resume.
                     </span>
